--- a/react_client/package.json
+++ b/react_client/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^15.5.3",
     "react-redux": "^5.0.4",
     "react-router": "^4.0.0",
+    "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.4",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
