--- a/react_client/package.json
+++ b/react_client/package.json
@@ -6,13 +6,19 @@
   "dependencies": {
     "axios": "^0.16.1",
     "babel-plugin-transform-class-properties": "6.22.0",
+    "bootflat": "^2.0.4",
+    "bootstrap": "^4.0.0-alpha.6",
     "history": "^4.6.1",
+    "lodash": "^4.17.4",
     "react": "^15.5.3",
+    "react-addons-css-transition-group": "^15.5.2",
+    "react-addons-transition-group": "^15.5.2",
     "react-dom": "^15.5.3",
     "react-redux": "^5.0.4",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.4",
+    "reactstrap": "^4.5.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "thunk": "0.0.1"
