--- a/react_client/package.json
+++ b/react_client/package.json
@@ -7,13 +7,23 @@
     "axios": "^0.16.1",
     "babel-plugin-transform-class-properties": "6.22.0",
     "bootflat": "^2.0.4",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^3.3.7",
+    "fixed-data-table": "^0.6.3",
+    "fixed-data-table-2": "^0.7.15",
+    "form-serialize": "^0.7.1",
     "history": "^4.6.1",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
+    "moment-range": "^3.0.3",
     "react": "^15.5.3",
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
+    "react-bootstrap": "^0.30.8",
+    "react-bootstrap-date-picker": "^5.0.1",
+    "react-bootstrap-table": "^3.2.0",
+    "react-breadcrumbs": "^1.6.6",
     "react-dom": "^15.5.3",
+    "react-input-calendar": "^0.3.14",
     "react-redux": "^5.0.4",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.1.1",
